--- a/style.css
+++ b/style.css
@@ -713,7 +713,7 @@ textarea {
    }
 
    .footer__links {
-      width: auto;
+      width: 100%;
       margin-top: 17px;
       margin-left: 20px;
       padding-left: 23px;
@@ -730,22 +730,45 @@ textarea {
    }
 
    .text__h1-cont {
-   font-size: 16px;
-   width: 341px;
-   margin: 32px auto 61px;
+      font-size: 16px;
+      width: 100%;
+      margin: 32px auto 61px;
    }
 
    .info {
-      padding: 46px 0 32px;
+      padding: 46px 37px 32px;
+      box-sizing: border-box;
+      width: 100%;
+   }
+
+   .info__main-img {
+      width: 100%;
    }
 
    .form-send {
       padding: 36px;
-      width: auto;
+      width: 100%;
+      box-sizing: border-box;
    }
 
    .form {
-      padding-top: 0;
-      padding-bottom: 32px;
+      box-sizing: border-box;
+      margin: 0 17px 32px;
+      padding: 0;
    }
+
+   .input-text {
+      width: 100%;
+      height: 46px;
+   }
+
+   .input-textarea {
+      width: 100%;
+      height: 92px;      
+   }
+
+   .button__send-form {
+      margin-top: 46px;
+   }
+
 }
